# mcp-zingmp3

./: mcp_zingmp3.py  pyproject.toml
