[project]
name = "mcp-zingmp3"
version = "0.1.2" # Tăng phiên bản
description = "MCP server cho tìm kiếm và lấy link Zing MP3"
dependencies = [
    "mcp",
    "requests",
    "cloudscraper"  # <-- THÊM THƯ VIỆN NÀY
]
# Chỉ cần build 1 module duy nhất
py-modules = ["mcp_zingmp3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# Lệnh này giờ sẽ trỏ đến module mcp_zingmp3 đã được cài
mcp-zingmp3 = "mcp_zingmp3:main"
