[project]
name = "mcp-zingmp3"
version = "0.2.0" # Tăng phiên bản
description = "MCP server cho Zing MP3 và YouTube Music"
dependencies = [
    "mcp",
    "requests",
    "cloudscraper",
    "ytmusicapi",  # <-- THƯ VIỆN MỚI CHO YOUTUBE MUSIC
    "pytube"       # <-- THƯ VIỆN MỚI ĐỂ LẤY LINK STREAM
]
# Chỉ cần build 1 module duy nhất
py-modules = ["mcp_zingmp3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# Lệnh này giờ sẽ trỏ đến module mcp_zingmp3 đã được cài
mcp-zingmp3 = "mcp_zingmp3:main"
